--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,33 @@
 {
-    "name": "devcake-deventer/laravel-loki-logging",
-    "version": "0.0.1",
-    "description": "Logging to Loki for Laravel",
-    "type": "library",
-    "authors": [
-        {
-            "name": "Sven Mol",
-            "email": "s.mol@devcake.nl"
-        }
-    ],
-    "require": {
-        "php": "^7.0",
-        "ext-json": "*",
-        "illuminate/support": "^8.0.0",
-        "illuminate/console": "^8.0.0",
-        "monolog/monolog": "^2.0.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Devcake\\LaravelLokiLogging\\": "src/"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Devcake\\LaravelLokiLogging\\L3ServiceProvider"
-            ]
-        }
+  "name": "devcake-deventer/laravel-loki-logging",
+  "version": "0.0.1",
+  "description": "Logging to Loki for Laravel",
+  "type": "library",
+  "authors": [
+    {
+      "name": "Sven Mol",
+      "email": "s.mol@devcake.nl"
     }
+  ],
+  "require": {
+    "php": "^8.1",
+    "ext-json": "*",
+    "illuminate/support": "^9.0|^10.0|^11.0",
+    "illuminate/console": "^9.0|^10.0|^11.0",
+    "illuminate/http": "^9.0|^10.0|^11.0",
+    "monolog/monolog": "^3.0",
+    "nesbot/carbon": "^2.0|^3.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Devcake\\LaravelLokiLogging\\": "src/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Devcake\\LaravelLokiLogging\\L3ServiceProvider"
+      ]
+    }
+  }
 }
