--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
   "require": {
     "php": "^8.1",
     "ext-json": "*",
-    "illuminate/support": "^9.0|^10.0|^11.0",
-    "illuminate/console": "^9.0|^10.0|^11.0",
-    "illuminate/http": "^9.0|^10.0|^11.0",
+    "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
+    "illuminate/console": "^9.0|^10.0|^11.0|^12.0",
+    "illuminate/http": "^9.0|^10.0|^11.0|^12.0",
     "monolog/monolog": "^3.0",
     "nesbot/carbon": "^2.0|^3.0"
   },
